project desc alignment fix

--- a/styles/SingleProject.module.scss
+++ b/styles/SingleProject.module.scss
@@ -85,6 +85,7 @@
 }
 
 .about_project {
+  align-self: flex-start;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
